# training-pipeline

./: pyproject.toml
