[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["danlawand <daniel.lawand@usp.br>"]
readme = "README.md"
packages = [{include = "training_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
torch = "^2.0.1"
utils = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
